@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-21T08:18:02Z",
+  "timestamp" : "2022-04-26T01:05:52Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 16,
-  "uniques" : 10,
+  "count" : 17,
+  "uniques" : 11,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
