@@ -1,3 +1,9 @@
+2022-04-26T01:05:52Z:
+* notice: last 14d: all unq: 17 9
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 16 10
+* notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 17 11
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-21T08:18:02Z:
 * notice: last 14d: all unq: 16 9
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 15 9
